able to run ceph commands from controller
- run controller in the same namespace of Rook/Ceph cluster
- mount configmaps and secrets as toolbox pod

Signed-off-by: Satoru Takeuchi <satoru.takeuchi@gmail.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -30,3 +30,19 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - ""
+  resources:
+  - configmaps
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
+  - list
+  - watch
