create/delete rbd snapshot when rbdpvcbackup resource creation/deletion
Signed-off-by: Yuma Ogami <yuma-ogami@cybozu.co.jp>

--- a/config/crd/bases/backup.cybozu.com_rbdpvcbackups.yaml
+++ b/config/crd/bases/backup.cybozu.com_rbdpvcbackups.yaml
@@ -34,6 +34,9 @@ spec:
           spec:
             description: RBDPVCBackupSpec defines the desired state of RBDPVCBackup
             properties:
+              namespace:
+                description: '''namespace'' specifies backup target Namespace'
+                type: string
               pvc:
                 description: '''pvc'' specifies backup target PVC'
                 type: string
