--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -81,21 +81,23 @@ setup-minikube: | $(BINDIR)
 
 .PHONY: launch-minikube
 launch-minikube:
-	$(SUDO) -E $(BINDIR)/minikube start \
-		--driver=none \
-		--container-runtime=containerd \
-		--kubernetes-version=v$(KUBERNETES_VERSION) \
-		--extra-config=kubelet.read-only-port=10255 \
-		--extra-config=kubeadm.node-name=$(CLUSTER_NAME)-worker \
-		--extra-config=kubelet.hostname-override=$(CLUSTER_NAME)-worker \
-		--cni=calico
-	$(SUDO) chown -R $$USER $$HOME/.kube $(MINIKUBE_HOME)/.minikube
-	$(SUDO) chmod -R a+r $$HOME/.kube $(MINIKUBE_HOME)/.minikube
-	$(SUDO) find $(MINIKUBE_HOME)/.minikube -name id_rsa -exec chmod 600 {} ';'
+	ifneq ($(shell $(MINIKUBE) status),)
+		$(SUDO) -E $(MINIKUBE) start \
+			--driver=none \
+			--container-runtime=containerd \
+			--kubernetes-version=v$(KUBERNETES_VERSION) \
+			--extra-config=kubelet.read-only-port=10255 \
+			--extra-config=kubeadm.node-name=$(CLUSTER_NAME)-worker \
+			--extra-config=kubelet.hostname-override=$(CLUSTER_NAME)-worker \
+			--cni=calico
+		$(SUDO) chown -R $$USER $$HOME/.kube $(MINIKUBE_HOME)/.minikube
+		$(SUDO) chmod -R a+r $$HOME/.kube $(MINIKUBE_HOME)/.minikube
+		$(SUDO) find $(MINIKUBE_HOME)/.minikube -name id_rsa -exec chmod 600 {} ';'
+	endif
 
 .PHONY: delete-minikube
 delete-minikube:
-	$(SUDO) -E $(BINDIR)/minikube delete || true
+	$(SUDO) -E $(MINIKUBE) delete || true
 
 .PHONY: create-loop-dev
 create-loop-dev: | $(TMPDIR)
