--- a/e2e/testdata/rbdpvcbackup-template.yaml
+++ b/e2e/testdata/rbdpvcbackup-template.yaml
@@ -8,5 +8,6 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/created-by: rbd-backup-system
   name: %s
+  namespace: %s
 spec:
   pvc: %s
