--- a/e2e/testdata/rook-pool-sc-template.yaml
+++ b/e2e/testdata/rook-pool-sc-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: ceph.rook.io/v1
 kind: CephBlockPool
 metadata:
-  name: replicapool
+  name: %s
   namespace: %s
 spec:
   failureDomain: osd
@@ -16,7 +16,7 @@ metadata:
 provisioner: rook-ceph.rbd.csi.ceph.com
 parameters:
   clusterID: rook-ceph
-  pool: replicapool
+  pool: %s
   imageFormat: "2"
   imageFeatures: layering
   csi.storage.k8s.io/provisioner-secret-name: rook-csi-rbd-provisioner
