--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -30,5 +30,5 @@ jobs:
           key: go-${{ hashFiles('go.sum', 'Makefile', 'versions.mk') }}
           restore-keys: |
             go-
-      - run: make -C e2e setup
-      - run: make -C e2e test
+      - run: make -C e2e setup-minikube-upstream-rook
+      - run: make -C e2e test-upstream-rook
