--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -31,25 +31,40 @@ CNI_PLUGIN_INSTALL_DIR := /opt/cni/bin
 
 .PHONY: setup-minikube-upstream-rook
 setup-minikube-upstream-rook:
+	echo aaaaa
+	ls -l /home/runner/work/rbd-backup-system/rbd-backup-system/e2e/
+
 	sudo apt update
 	sudo apt install -y conntrack socat
 	curl -LO https://storage.googleapis.com/minikube/releases/$(MINIKUBE_VERSION)/minikube_latest_amd64.deb
 	sudo dpkg -i minikube_latest_amd64.deb
 	rm -f minikube_latest_amd64.deb
 
+	echo bbbbb
+	ls -l /home/runner/work/rbd-backup-system/rbd-backup-system/e2e/
+
 	curl -LO https://github.com/Mirantis/cri-dockerd/releases/download/v0.3.9/cri-dockerd_0.3.9.3-0.ubuntu-focal_amd64.deb
 	sudo dpkg -i cri-dockerd_0.3.9.3-0.ubuntu-focal_amd64.deb
 	rm -f cri-dockerd_0.3.9.3-0.ubuntu-focal_amd64.deb
+
+	echo ccccc
+	ls -l /home/runner/work/rbd-backup-system/rbd-backup-system/e2e/
 
 	wget https://github.com/kubernetes-sigs/cri-tools/releases/download/$(CRICTL_VERSION)/crictl-$(CRICTL_VERSION)-linux-amd64.tar.gz
 	sudo tar zxvf crictl-$(CRICTL_VERSION)-linux-amd64.tar.gz -C /usr/local/bin
 	rm -f crictl-$(CRICTL_VERSION)-linux-amd64.tar.gz
 	sudo sysctl fs.protected_regular=0
 
+	echo ddddd
+	ls -l /home/runner/work/rbd-backup-system/rbd-backup-system/e2e/
+
 	curl -LO "https://github.com/containernetworking/plugins/releases/download/$(CNI_PLUGIN_VERSION)/$(CNI_PLUGIN_TAR)"
 	sudo mkdir -p "$(CNI_PLUGIN_INSTALL_DIR)"
 	sudo tar -xf "$(CNI_PLUGIN_TAR)" -C "$(CNI_PLUGIN_INSTALL_DIR)"
 	rm "$(CNI_PLUGIN_TAR)"
+
+	echo eeeee
+	ls -l /home/runner/work/rbd-backup-system/rbd-backup-system/e2e/
 
 	sudo -E minikube start --kubernetes-version="v$(KUBERNETES_VERSION)" --driver=none --memory 6g --cpus=2 --addons ingress --cni=calico
 
