--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -31,4 +31,4 @@ jobs:
           restore-keys: |
             go-
       - run: make -C e2e setup-minikube-upstream-rook
-      - run: make -C e2e test-upstream-rook
+      - run: make -C e2e test-upstream-rook DOCKER_SAVE_PATH=/mnt
