--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -207,7 +207,7 @@ common/setup-components:
 	$(MAKE) -C .. docker-build
 	df -h
 	echo $(DOCKER_SAVE_PATH)/controller-container.tar
-	docker save controller:latest > $(DOCKER_SAVE_PATH)/controller-container.tar
+	$(SUDO) sh -c "docker save controller:latest > $(DOCKER_SAVE_PATH)/controller-container.tar"
 	$(SUDO) ctr -n k8s.io images import $(DOCKER_SAVE_PATH)/controller-container.tar
 	$(MAKE) -C .. install
 	$(MAKE) -C .. deploy
