--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -207,10 +207,10 @@ common/setup-components:
 	$(MAKE) -C .. docker-build
 	df -h
 	echo $(DOCKER_SAVE_PATH)/controller-container.tar
-	$(SUDO) sh -c "docker save controller:latest > $(DOCKER_SAVE_PATH)/controller-container.tar"
+	docker save controller:latest | $(SUDO) ctr -n k8s.io images import -
 	ls -l $(DOCKER_SAVE_PATH)/controller-container.tar
 	ls -hl $(DOCKER_SAVE_PATH)/controller-container.tar
-	$(SUDO) ctr -n k8s.io images import $(DOCKER_SAVE_PATH)/controller-container.tar
+	
 	$(MAKE) -C .. install
 	$(MAKE) -C .. deploy
 
