--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -15,12 +15,16 @@ jobs:
   build:
     runs-on: "ubuntu-20.04"
     steps:
+      - run: df -h; lsblk
       - uses: actions/checkout@v4
+      - run: df -h; lsblk
       - uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
+      - run: df -h; lsblk
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      - run: df -h; lsblk
       - name: cache go dependencies
         uses: actions/cache@v4
         with:
@@ -30,5 +34,7 @@ jobs:
           key: go-${{ hashFiles('go.sum', 'Makefile', 'versions.mk') }}
           restore-keys: |
             go-
+      - run: df -h; lsblk
       - run: make -C e2e setup-minikube-upstream-rook
+      - run: df -h; lsblk
       - run: make -C e2e test-upstream-rook DOCKER_SAVE_PATH=/mnt
