--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -22,6 +22,10 @@ jobs:
         with:
           go-version-file: "go.mod"
       - run: df -h; lsblk
+      - run: sudo apt update
+      - run: sudo apt purge -y --autoremove apport apport-symptoms fwupd nano netplan.io popularity-contest unattended-upgrades update-manager-core snapd
+      - run: sudo docker image prune
+      - run: df -h; lsblk
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - run: df -h; lsblk
