--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -23,7 +23,15 @@ jobs:
           go-version-file: "go.mod"
       - run: df -h; lsblk
       - run: sudo apt update
-      - run: sudo apt purge -y --autoremove apport apport-symptoms fwupd nano netplan.io popularity-contest unattended-upgrades update-manager-core snapd
+      - run: sudo apt purge -y apport apport-symptoms fwupd nano netplan.io popularity-contest unattended-upgrades update-manager-core snapd
+      - run: sudo docker rmi $(docker image ls -aq) >/dev/null 2>&1 || true
+      - run: sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/powershell /usr/share/swift /usr/local/.ghcup /usr/lib/jvm || true
+      - run: sudo apt purge aria2 ansible azure-cli shellcheck rpm xorriso zsync esl-erlang firefox gfortran-8 gfortran-9 google-chrome-stable google-cloud-sdk imagemagick libmagickcore-dev libmagickwand-dev libmagic-dev ant ant-optional kubectl mercurial apt-transport-https mono-complete libmysqlclient unixodbc-dev yarn chrpath libssl-dev libxft-dev libfreetype6 libfreetype6-dev libfontconfig1 libfontconfig1-dev snmp pollinate libpq-dev postgresql-client powershell ruby-full sphinxsearch subversion mongodb-org azure-cli microsoft-edge-stable -y -f >/dev/null 2>&1
+      - run: sudo apt purge -y $(dpkg-query -W | grep mysql | awk '{print $1}')
+      - run: sudo apt purge -y $(dpkg-query -W | grep php | awk '{print $1}')
+      - run: sudo apt purge -y $(dpkg-query -W | grep dotnet | awk '{print $1}')&1
+      - run: sudo apt autoremove -y >/dev/null 2>&1
+      - run: sudo apt autoclean -y >/dev/null 2>&1
       - run: sudo docker image prune
       - run: df -h; lsblk
       - name: Set up Docker Buildx
