--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -204,7 +204,9 @@ common/setup-components:
 	$(KUBECTL) apply -f https://github.com/cert-manager/cert-manager/releases/download/$(CERT_MANAGER_VERSION)/cert-manager.yaml
 	$(MAKE) -C .. docker-build
 	df -h
-	minikube image load controller:latest
+	# We can't use `minikube image load` due to a minikube's problem.
+	# ref. https://github.com/kubernetes/minikube/issues/17785
+	docker save controller:latest | $(SUDO) ctr -n k8s.io images import -
 	
 	$(MAKE) -C .. install
 	$(MAKE) -C .. deploy
