--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -5,11 +5,10 @@ TMPDIR := $(shell pwd)/tmp
 CURL := curl -sSLf
 GINKGO := $(BINDIR)/ginkgo-$(GINKGO_VERSION)
 GINKGO_FLAGS :=
-GO_FILES := $(shell find .. -path ../e2e -prune -o -name '*.go' -print)
 MINIKUBE := $(BINDIR)/minikube
 KUBECTL := $(BINDIR)/kubectl-$(KUBERNETES_VERSION)
 MINIKUBE_HOME = $(BINDIR)
-CLUSTER_NAME := minikube
+NODE_NAME ?= minikube-worker
 SUDO := sudo
 DD := dd
 LOSETUP := losetup
@@ -20,66 +19,34 @@ LOOP_DEV := $(shell loop_dev=$$($(LOSETUP) | grep $(LOOP_FILE) | cut -d ' ' -f 1
 		else \
 			echo $$loop_dev; \
 		fi)
+CNI_PLUGIN_INSTALL_DIR := /opt/cni/bin
 
 export MINIKUBE_HOME
 
-DOMAIN_NAME := cybozu.com
-
-CNI_PLUGIN_VERSION := v1.4.0
-CNI_PLUGIN_TAR := cni-plugins-linux-amd64-$(CNI_PLUGIN_VERSION).tgz
-CNI_PLUGIN_INSTALL_DIR := /opt/cni/bin
-
-.PHONY: setup-minikube-upstream-rook
-setup-minikube-upstream-rook:
+.PHONY: setup-minikube
+setup-minikube:
 	$(MAKE) $(GINKGO)
 	$(MAKE) $(KUBECTL)
 
-	echo aaaaa
-	ls -l /home/runner/work/rbd-backup-system/rbd-backup-system/e2e/
-
-	sudo apt update
-	sudo apt install -y conntrack socat
+	$(SUDO) apt update
+	$(SUDO) apt install -y conntrack socat
 	curl -LO https://storage.googleapis.com/minikube/releases/$(MINIKUBE_VERSION)/minikube_latest_amd64.deb
-	sudo dpkg -i minikube_latest_amd64.deb
+	$(SUDO) dpkg -i minikube_latest_amd64.deb
 	rm -f minikube_latest_amd64.deb
 
-	echo bbbbb
-	ls -l /home/runner/work/rbd-backup-system/rbd-backup-system/e2e/
+	$(CURL) -o cri-dockerd.deb https://github.com/Mirantis/cri-dockerd/releases/download/$(CRI_DOCKERD_VERSION)/cri-dockerd_$(CRI_DOCKERD_VERSION:v%=%).3-0.ubuntu-focal_amd64.deb
+	$(SUDO) dpkg -i cri-dockerd.deb
+	rm -f cri-dockerd.deb
 
-	curl -LO https://github.com/Mirantis/cri-dockerd/releases/download/v0.3.9/cri-dockerd_0.3.9.3-0.ubuntu-focal_amd64.deb
-	sudo dpkg -i cri-dockerd_0.3.9.3-0.ubuntu-focal_amd64.deb
-	rm -f cri-dockerd_0.3.9.3-0.ubuntu-focal_amd64.deb
+	$(CURL) -o crictl.tar.gz https://github.com/kubernetes-sigs/cri-tools/releases/download/$(CRICTL_VERSION)/crictl-$(CRICTL_VERSION)-linux-amd64.tar.gz
+	$(SUDO) tar zxvf crictl.tar.gz -C /usr/local/bin
+	rm -f crictl.tar.gz
+	$(SUDO) sysctl fs.protected_regular=0
 
-	echo ccccc
-	ls -l /home/runner/work/rbd-backup-system/rbd-backup-system/e2e/
-
-	wget https://github.com/kubernetes-sigs/cri-tools/releases/download/$(CRICTL_VERSION)/crictl-$(CRICTL_VERSION)-linux-amd64.tar.gz
-	sudo tar zxvf crictl-$(CRICTL_VERSION)-linux-amd64.tar.gz -C /usr/local/bin
-	rm -f crictl-$(CRICTL_VERSION)-linux-amd64.tar.gz
-	sudo sysctl fs.protected_regular=0
-
-	echo ddddd
-	ls -l /home/runner/work/rbd-backup-system/rbd-backup-system/e2e/
-
-	curl -LO "https://github.com/containernetworking/plugins/releases/download/$(CNI_PLUGIN_VERSION)/$(CNI_PLUGIN_TAR)"
-	sudo mkdir -p "$(CNI_PLUGIN_INSTALL_DIR)"
-	sudo tar -xf "$(CNI_PLUGIN_TAR)" -C "$(CNI_PLUGIN_INSTALL_DIR)"
-	rm "$(CNI_PLUGIN_TAR)"
-
-	echo eeeee
-	ls -l /home/runner/work/rbd-backup-system/rbd-backup-system/e2e/
-
-	sudo -E minikube start --kubernetes-version="v$(KUBERNETES_VERSION)" --driver=none --memory 6g --cpus=2 --addons ingress --cni=calico --extra-config=kubeadm.node-name=minikube-worker --extra-config=kubelet.hostname-override=minikube-worker
-
-	$(SUDO) chown -R $$USER $$HOME/.kube $(MINIKUBE_HOME)/.minikube
-	$(SUDO) chmod -R a+r $$HOME/.kube $(MINIKUBE_HOME)/.minikube
-	$(SUDO) find $(MINIKUBE_HOME)/.minikube -name id_rsa -exec chmod 600 {} ';'
-
-.PHONY: test-upstream-rook
-test-upstream-rook:
-	$(MAKE) launch-rook-ceph
-	$(MAKE) common/setup-components
-	$(MAKE) common/test
+	$(CURL) -o cni-plugins.tgz https://github.com/containernetworking/plugins/releases/download/$(CNI_PLUGINS_VERSION)/cni-plugins-linux-amd64-$(CNI_PLUGINS_VERSION).tgz
+	$(SUDO) mkdir -p $(CNI_PLUGIN_INSTALL_DIR)
+	$(SUDO) tar -xf cni-plugins.tgz -C $(CNI_PLUGIN_INSTALL_DIR)
+	rm -f cni-plugins.tgz
 
 .PHONY: test
 test:
@@ -93,25 +60,15 @@ clean:
 	$(MAKE) delete-rook-ceph
 	$(MAKE) delete-minikube
 
-.PHONY: setup
-setup: setup-minikube
-	$(MAKE) $(GINKGO)
-	$(MAKE) $(MINIKUBE)
-	$(MAKE) $(KUBECTL)
-
 $(BINDIR):
-	echo "before mkdir -p $@"
 	ls -l /home/runner/work/rbd-backup-system/rbd-backup-system/e2e/
 	mkdir -p $@
-	echo "after mkdir -p $@"
 	ls -l /home/runner/work/rbd-backup-system/rbd-backup-system/e2e/
 
 $(TMPDIR):
 	mkdir -p $@
 
 $(GINKGO): | $(BINDIR)
-	echo gggggg
-	ls -l /home/runner/work/rbd-backup-system/rbd-backup-system/e2e/
 	GOBIN=$(BINDIR) go install github.com/onsi/ginkgo/v2/ginkgo@$(GINKGO_VERSION)
 	mv $(BINDIR)/ginkgo $@
 
@@ -119,41 +76,21 @@ $(KUBECTL): | $(BINDIR)
 	$(CURL) -o $@ https://storage.googleapis.com/kubernetes-release/release/v$(KUBERNETES_VERSION)/bin/linux/amd64/kubectl
 	chmod a+x $@
 
-.PHONY: setup-minikube
-setup-minikube: | $(BINDIR)
-	$(SUDO) apt-get update
-	DEBIAN_FRONTEND=noninteractive $(SUDO) apt-get install -y --no-install-recommends conntrack
-
-	$(CURL) -o $(BINDIR)/minikube https://github.com/kubernetes/minikube/releases/download/$(MINIKUBE_VERSION)/minikube-linux-amd64
-	chmod a+x $(BINDIR)/minikube
-
-	# These tools are required to use minikube for Kubernetes v1.24+
-	# For CNI plugins, see https://github.com/Mirantis/cri-dockerd/blob/v0.2.6/README.md#important
-	$(CURL) -o cni-plugins.tgz https://github.com/containernetworking/plugins/releases/download/$(CNI_PLUGINS_VERSION)/cni-plugins-linux-amd64-$(CNI_PLUGINS_VERSION).tgz
-	$(SUDO) mkdir -p /opt/cni/bin
-	$(SUDO) tar -C /opt/cni/bin -xf cni-plugins.tgz
-
-	# Install cri-docker
-	$(CURL) -o cri-dockerd.deb https://github.com/Mirantis/cri-dockerd/releases/download/$(CRI_DOCKERD_VERSION)/cri-dockerd_$(CRI_DOCKERD_VERSION:v%=%).3-0.ubuntu-focal_amd64.deb
-	$(SUDO) dpkg -i cri-dockerd.deb
-
-	$(CURL) -o crictl.tar.gz https://github.com/kubernetes-sigs/cri-tools/releases/download/$(CRICTL_VERSION)/crictl-$(CRICTL_VERSION)-linux-amd64.tar.gz
-	$(SUDO) tar -C /usr/local/bin -xf crictl.tar.gz
-
 .PHONY: launch-minikube
 launch-minikube:
 	# TODO: Is there any better way to verify whether k8s cluster is available or not?
 	kubectl get pod >/dev/null 2>&1; \
 	RET=$$? ; \
 	if [ $$RET -eq 0 ] ; then exit; fi ; \
-	$(SUDO) -E $(MINIKUBE) start \
+	$(SUDO) -E minikube start \
+		--kubernetes-version="v$(KUBERNETES_VERSION)" \
 		--driver=none \
-		--container-runtime=containerd \
-		--kubernetes-version=v$(KUBERNETES_VERSION) \
-		--extra-config=kubelet.read-only-port=10255 \
-		--extra-config=kubeadm.node-name=$(CLUSTER_NAME)-worker \
-		--extra-config=kubelet.hostname-override=$(CLUSTER_NAME)-worker \
-			--cni=calico
+		--memory 6g \
+		--cpus=2 \
+		--addons ingress \
+		--cni=calico \
+		--extra-config=kubeadm.node-name=$(NODE_NAME) \
+		--extra-config=kubelet.hostname-override=$(NODE_NAME)
 	$(SUDO) chown -R $$USER $$HOME/.kube $(MINIKUBE_HOME)/.minikube
 	$(SUDO) chmod -R a+r $$HOME/.kube $(MINIKUBE_HOME)/.minikube
 	$(SUDO) find $(MINIKUBE_HOME)/.minikube -name id_rsa -exec chmod 600 {} ';'
@@ -183,7 +120,7 @@ launch-rook-ceph: create-loop-dev
 	$(KUBECTL) apply -f testdata/common.yaml
 	$(KUBECTL) apply -f testdata/crds.yaml
 	$(KUBECTL) apply -f testdata/operator.yaml
-	sed "s%LOOP_DEV%$(LOOP_DEV)%" testdata/cluster-template.yaml > testdata/cluster.yaml
+	sed -e "s%LOOP_DEV%$(LOOP_DEV)%" -e "s%NODE_NAME%$(NODE_NAME)%" testdata/cluster-template.yaml > testdata/cluster.yaml
 	$(KUBECTL) apply -f testdata/cluster.yaml
 	$(KUBECTL) apply -f testdata/toolbox.yaml
 
@@ -192,7 +129,7 @@ delete-rook-ceph:
 	$(KUBECTL) delete -f testdata/toolbox.yaml
 	$(KUBECTL) delete -f testdata/cluster.yaml
 	$(SUDO) rm -rf /var/lib/rook
-	ls /dev/mapper/ceph-* | xargs -I% -- sudo dmsetup remove %
+	ls /dev/mapper/ceph-* | xargs -I% -- $(SUDO) dmsetup remove %
 	$(SUDO) rm -rf /dev/mapper/ceph-*
 	$(KUBECTL) delete -f testdata/operator.yaml
 	$(KUBECTL) delete -f testdata/crds.yaml
@@ -203,7 +140,6 @@ delete-rook-ceph:
 common/setup-components:
 	$(KUBECTL) apply -f https://github.com/cert-manager/cert-manager/releases/download/$(CERT_MANAGER_VERSION)/cert-manager.yaml
 	$(MAKE) -C .. docker-build
-	df -h
 	# We can't use `minikube image load` due to a minikube's problem.
 	# ref. https://github.com/kubernetes/minikube/issues/17785
 	docker save controller:latest | $(SUDO) ctr -n k8s.io images import -
@@ -213,7 +149,6 @@ common/setup-components:
 
 .PHONY: common/test
 common/test: $(GINKGO)
-	losetup
 	$(SUDO) -E env \
 	PATH=${PATH} \
 	E2ETEST=1 \
