--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -15,13 +15,10 @@ jobs:
   build:
     runs-on: "ubuntu-20.04"
     steps:
-      - run: df -h; lsblk
       - uses: actions/checkout@v4
-      - run: df -h; lsblk
       - uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
-      - run: df -h; lsblk
       - run: sudo apt update
       - run: sudo apt purge -y apport apport-symptoms fwupd nano netplan.io popularity-contest unattended-upgrades update-manager-core snapd
       - run: sudo docker rmi $(docker image ls -aq) >/dev/null 2>&1 || true
@@ -34,10 +31,8 @@ jobs:
       - run: sudo apt purge -y $(dpkg-query -W | grep dotnet | awk '{print $1}')
       - run: sudo apt autoremove -y >/dev/null 2>&1
       - run: sudo apt autoclean -y >/dev/null 2>&1
-      - run: df -h; lsblk
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - run: df -h; lsblk
       - name: cache go dependencies
         uses: actions/cache@v4
         with:
@@ -47,7 +42,5 @@ jobs:
           key: go-${{ hashFiles('go.sum', 'Makefile', 'versions.mk') }}
           restore-keys: |
             go-
-      - run: df -h; lsblk
-      - run: make -C e2e setup-minikube-upstream-rook
-      - run: df -h; lsblk
-      - run: make -C e2e test-upstream-rook
+      - run: make -C e2e setup-minikube
+      - run: make -C e2e test
