add lint on unit test

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,4 +24,5 @@ jobs:
           key: go-${{ hashFiles('go.sum', 'Makefile', 'versions.mk') }}
           restore-keys: |
             go-
+      - run: make lint
       - run: make test
